--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   page_flip_builder: ^0.1.3
   font_awesome_flutter: ^9.1.0
   flutter_speed_dial: ^4.2.0
+  http: ^0.13.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
