--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_speed_dial: ^4.2.0
   http: ^0.13.3
   table_sticky_headers: ^2.0.0
+  lazy_data_table: ^0.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
