Added app bar to standings

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   http: ^0.13.3
   lazy_data_table: ^0.3.0
   cupertino_icons: ^1.0.2
+  flutter_point_tab_bar: ^0.2.0
 
 dev_dependencies:
   flutter_test:
