--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutter_nba",
-    "short_name": "flutter_nba",
+    "name": "Flutter NBA",
+    "short_name": "Flutter NBA",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
