--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,10 @@ dependencies:
   lazy_data_table: ^0.3.0  # standings
   flutter_point_tab_bar: ^0.2.0  # directory
   toggle_switch: ^1.2.0  # normal / advanced in standings
-  animated_text_kit: ^4.2.1
-  get: ^4.1.4
+  animated_text_kit: ^4.2.1  # loading text
+  get: ^4.1.4  # navigation
+  dotted_line: ^3.0.0  # for games
+  sliding_up_panel: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
