Updated game card, removed date widget for now

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   get: ^4.1.4  # navigation
   dotted_line: ^3.0.0  # for games
   sticky_headers: ^0.2.0  # for opened game
+  flutter_svg: ^0.22.0 # for card score
 
 dev_dependencies:
   flutter_test:
@@ -51,8 +52,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
