--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
   page_flip_builder: ^0.1.3  # for flipping directories
   flutter_speed_dial: ^4.2.0  # speed dial
-  http: ^0.13.3  # http get and post
+  http: ^0.13.3  # http get
   lazy_data_table: ^0.3.0  # standings
   tab_indicator_styler: ^2.0.0  # tabs
   toggle_switch: ^1.2.0  # normal / advanced in standings
@@ -34,6 +34,8 @@ dependencies:
   dotted_line: ^3.0.0  # for games
   sticky_headers: ^0.2.0  # for opened game
   syncfusion_flutter_sliders: ^19.2.62  # for box score slider
+  flutter_linkify: ^5.0.2
+  url_launcher: ^6.0.12
 
 dev_dependencies:
   flutter_test:
